--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,11 +7,12 @@
 4+^h|*PROC Release 1.?.?*
 
 |[[latest_issue]]1.5.0
-|{spec_tickets}/SPECPROC-12[SPECPROC-12^]. Define lifecycle state for parallel Task Groups, including decision groups. Moved lifecycle state to 6.2.3; update 6.3.2; update Aggregate Lifecycle State section (7.3).
+|{spec_tickets}/SPECPROC-12[SPECPROC-12^]. Define lifecycle state for parallel Task Groups, including decision groups. Moved lifecycle state to 6.2.3; update 6.3.2; update Aggregate Lifecycle State section (7.3); +
+ {spec_tickets}/SPECPROC-34[SPECPROC-34^]. Clarify evaluate order for `REPEAT_SPEC._terminate_condition_` to 'pre'.
 |B Naess, +
  M Polajnar, +
  T Beale
-|[[latest_issue_date]]17 Mar 2020
+|[[latest_issue_date]]18 Mar 2020
 
 |
 |{spec_tickets}/SPECPROC-32[SPECPROC-32^]. Improve Introduction and Requirements Discussion.
